<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/text_box_name"
            style="@style/HeaderTextStyle"
            android:hint="Name"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Toppings" />


        <CheckBox
            android:id="@+id/cb_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="24dp"
            android:text="Whipped Cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="24dp"
            android:text="@string/Chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:fontFamily="monospace"
            android:paddingBottom="16dp"
            android:text="@string/quantity"
            android:textColor="#363636"></TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dec"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />


            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/HeaderTextStyle"
                android:text="2"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_inc"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />


        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:paddingBottom="16dp"
            android:text="@string/order_sum"

            android:textColor="#363636" />

        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/HeaderTextStyle"
            android:text="$0"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>